--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ temp/
 /frontend/.jest-cache
 /terraform/staging/.terraform
 terraform/staging/shared-infrastructure/.terraform/providers/registry.terraform.io/hashicorp/google/5.45.2/windows_amd64/terraform-provider-google_v5.45.2_x5.exe
+.service_discovery/frontend.json
