--- a/work_in_progress/.github/config/secrets.yml
+++ b/work_in_progress/.github/config/secrets.yml
@@ -32,7 +32,7 @@ repository_secrets:
   
   # Google Cloud Platform
   gcp:
-    GCP_SA_KEY:
+    GCP_STAGING_SA_KEY:
       description: Service account key for GCP authentication
       required: true
       sensitive: true
