--- a/.github/workflows/staging-workflows/restart.yml
+++ b/.github/workflows/staging-workflows/restart.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Check if environment exists
         id: check
@@ -71,7 +71,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Get GKE credentials
         run: |
@@ -107,7 +107,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Get GKE credentials
         run: |
@@ -143,7 +143,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Get GKE credentials
         run: |
