--- a/.github/workflows/staging-workflows/build-backend.yml
+++ b/.github/workflows/staging-workflows/build-backend.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Configure Docker for GCR
         run: |
