--- a/.github/workflows/staging-workflows/deploy.yml
+++ b/.github/workflows/staging-workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Get GKE credentials
         run: |
@@ -99,7 +99,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Get GKE credentials
         run: |
