--- a/.github/workflows/staging-workflows/destroy.yml
+++ b/.github/workflows/staging-workflows/destroy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Backup database
         continue-on-error: true
@@ -57,7 +57,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Get GKE credentials
         continue-on-error: true
@@ -82,7 +82,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Delete staging images
         continue-on-error: true
@@ -118,7 +118,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Remove DNS records
         continue-on-error: true
