--- a/.github/workflows/staging-workflows/terraform.yml
+++ b/.github/workflows/staging-workflows/terraform.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
