--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ temp/
 terraform/staging/shared-infrastructure/.terraform/providers/registry.terraform.io/hashicorp/google/5.45.2/windows_amd64/terraform-provider-google_v5.45.2_x5.exe
 .service_discovery/frontend.json
 .service_discovery/backend.json
+.dev_services.json
