--- a/terraform-github-gemini/.github/workflows/deploy.yml
+++ b/terraform-github-gemini/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         id: 'init'
         run: 'terraform -chdir=${{ env.TF_WORKING_DIR }} init'
         env:
-          GOOGLE_CREDENTIALS: '${{ secrets.GCP_SA_KEY }}'
+          GOOGLE_CREDENTIALS: '${{ secrets.GCP_STAGING_SA_KEY }}'
 
       - name: 'Terraform Validate'
         id: 'validate'
@@ -37,17 +37,17 @@ jobs:
         run: 'terraform -chdir=${{ env.TF_WORKING_DIR }} plan -no-color'
         if: github.event_name == 'pull_request'
         env:
-          GOOGLE_CREDENTIALS: '${{ secrets.GCP_SA_KEY }}'
+          GOOGLE_CREDENTIALS: '${{ secrets.GCP_STAGING_SA_KEY }}'
 
       - name: 'Terraform Plan (Push)'
         id: 'plan_push'
         run: 'terraform -chdir=${{ env.TF_WORKING_DIR }} plan -no-color -out=tfplan'
         if: github.event_name == 'push'
         env:
-          GOOGLE_CREDENTIALS: '${{ secrets.GCP_SA_KEY }}'
+          GOOGLE_CREDENTIALS: '${{ secrets.GCP_STAGING_SA_KEY }}'
 
       - name: 'Terraform Apply'
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: 'terraform -chdir=${{ env.TF_WORKING_DIR }} apply -auto-approve tfplan'
         env:
-          GOOGLE_CREDENTIALS: '${{ secrets.GCP_SA_KEY }}'
+          GOOGLE_CREDENTIALS: '${{ secrets.GCP_STAGING_SA_KEY }}'
