--- a/.github/workflows/test-smoke.yml
+++ b/.github/workflows/test-smoke.yml
@@ -67,8 +67,8 @@ jobs:
       - name: Install Core Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt --no-deps
-          pip install pytest pytest-asyncio pytest-timeout
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
           
       - name: Run Smoke Tests
         id: test
