--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ terraform/staging/shared-infrastructure/.terraform/providers/registry.terraform.
 .service_discovery/backend.json
 .dev_services.json
 frontend/cypress/downloads/downloads.htm
+/terraform-gcp/github-runner/.terraform/providers
