--- a/.github/workflows/test-on-demand.yml
+++ b/.github/workflows/test-on-demand.yml
@@ -35,7 +35,7 @@ jobs:
     if: |
       (github.event_name == 'issue_comment' && contains(github.event.comment.body, '@test')) ||
       github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       should_run: ${{ steps.parse.outputs.should_run }}
       test_level: ${{ steps.parse.outputs.test_level }}
@@ -142,7 +142,7 @@ jobs:
     name: Notify Test Start
     needs: parse-command
     if: needs.parse-command.outputs.should_run == 'true'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
       - name: Comment PR
@@ -173,25 +173,25 @@ jobs:
       matrix:
         include:
           - test_level: smoke
-            runner: ubuntu-latest
+            runner: self-hosted
             timeout: 5
           - test_level: unit
-            runner: ubuntu-latest
+            runner: self-hosted
             timeout: 10
           - test_level: integration
-            runner: ubuntu-latest
+            runner: self-hosted
             timeout: 15
           - test_level: comprehensive
-            runner: ubuntu-latest  # Would be GCP runner in production
+            runner: self-hosted
             timeout: 30
           - test_level: critical
-            runner: ubuntu-latest
+            runner: self-hosted
             timeout: 10
           - test_level: performance
-            runner: ubuntu-latest  # Would be GCP high-mem in production
+            runner: self-hosted
             timeout: 45
           - test_level: security
-            runner: ubuntu-latest
+            runner: self-hosted
             timeout: 20
             
     steps:
