--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -56,7 +56,7 @@ jobs:
         contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.review.author_association)
       )
     timeout-minutes: 10
-    runs-on: 'ubuntu-latest'
+    runs-on: 'self-hosted'
 
     steps:
       - name: 'Generate GitHub App Token'
