--- a/.github/workflows/gemini-issue-automated-triage.yml
+++ b/.github/workflows/gemini-issue-automated-triage.yml
@@ -40,7 +40,7 @@ jobs:
         contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.comment.author_association)
       )
     timeout-minutes: 5
-    runs-on: 'ubuntu-latest'
+    runs-on: 'self-hosted'
 
     steps:
       - name: 'Checkout repository'
