--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -61,7 +61,7 @@ jobs:
         contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.review.author_association)
       )
     timeout-minutes: 5
-    runs-on: 'ubuntu-latest'
+    runs-on: 'self-hosted'
 
     steps:
       - name: 'Checkout PR code'
