--- a/.github/workflows/staging-workflows/build-backend.yml
+++ b/.github/workflows/staging-workflows/build-backend.yml
@@ -24,7 +24,7 @@ on:
 jobs:
   build:
     name: Build Backend Image
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     timeout-minutes: 30
     outputs:
       image_tag: ${{ steps.build.outputs.image_tag }}
