--- a/.github/workflows/staging-workflows/build-frontend.yml
+++ b/.github/workflows/staging-workflows/build-frontend.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   build:
     name: Build Frontend Image
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     timeout-minutes: 30
     outputs:
       image_tag: ${{ steps.build.outputs.image_tag }}
