--- a/.github/workflows/staging-workflows/destroy.yml
+++ b/.github/workflows/staging-workflows/destroy.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   backup:
     name: Backup Environment Data
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -52,7 +52,7 @@ jobs:
   
   cleanup-kubernetes:
     name: Cleanup Kubernetes Resources
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -77,7 +77,7 @@ jobs:
   
   cleanup-images:
     name: Cleanup Docker Images
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -113,7 +113,7 @@ jobs:
   cleanup-dns:
     name: Cleanup DNS Records
     needs: destroy-infrastructure
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -136,7 +136,7 @@ jobs:
   final-cleanup:
     name: Final Cleanup
     needs: [destroy-infrastructure, cleanup-images, cleanup-dns]
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Remove state locks
         continue-on-error: true
