--- a/.github/workflows/staging-workflows/notify.yml
+++ b/.github/workflows/staging-workflows/notify.yml
@@ -28,7 +28,7 @@ on:
 jobs:
   notify:
     name: Send Notifications
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Prepare notification data
         id: prepare
