--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -37,7 +37,7 @@ permissions:
 jobs:
   determine-shards:
     name: Determine Test Shards
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       shards: ${{ steps.shards.outputs.matrix }}
       
@@ -57,7 +57,7 @@ jobs:
   unit-test:
     name: Unit Tests - ${{ matrix.shard }}
     needs: determine-shards
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     timeout-minutes: 10
     
     strategy:
@@ -133,7 +133,7 @@ jobs:
   unit-test-summary:
     name: Unit Test Summary
     needs: unit-test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: always()
     
     steps:
