--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -22,6 +22,13 @@ on:
           - unit
           - integration
           - comprehensive
+          - comprehensive-backend
+          - comprehensive-frontend
+          - comprehensive-core
+          - comprehensive-agents
+          - comprehensive-websocket
+          - comprehensive-database
+          - comprehensive-api
           - critical
       triggered_by:
         description: 'Who triggered the tests'
