--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ frontend/cypress/downloads/downloads.htm
 /terraform-gcp/github-runner/.terraform/providers
 *.tfstate
 terraform-gcp/github-runner/terraform.tfstate.backup
+terraform-gcp/github-runner/terraform.tfvars
